# vivarium

./: Cargo.toml  README.md  Trunk.toml  build.sh  index.html  up.sh
examples/: nesting_demo.rs  predation_demo.rs
src/: components.rs  config.rs  lib.rs  lsystem_tree.rs  main.rs  nav_graph.rs  orbit_camera.rs  spatial.rs  squirrel.rs  wind.rs
src/systems/: boundary.rs  brownian.rs  eating.rs  face_velocity.rs  flocking.rs  hunt.rs  mod.rs  movement.rs  nesting.rs  predator.rs  spatial_update.rs  swarm_cohesion.rs  visuals.rs
tests/: behavior_tests.rs  nesting_tests.rs  predation_tests.rs  spawn_tests.rs  squirrel_tests.rs  system_tests.rs  unit_tests.rs
