[package]
name = "vivarium"
version = "0.1.0"
edition = "2024"

[dependencies]
pathfinding = "4"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"

[dependencies.bevy]
version = "0.18.1"
features = ["webgl2"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
